<resources>
    <string name="app_name">DgStore</string>
    <string name="title_activity_bottom_navigation_view">BottomNavigationView</string>
    <string name="title_home">Home</string>
    <string name="title_bag">Bag</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_shop">Shop</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="facebook_app_id">683497339926888</string>
    <string name="fb_login_protocol_scheme">fb683497339926888</string>
    <string name="facebook_client_token">c812cc3b51308b322f9401f8c43ea942</string>
</resources>