<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_bag"
        android:icon="@drawable/ic_favourite_black_24dp"
        android:title="@string/title_bag" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_bag_black_24dp"
        android:title="@string/title_favourite" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shop_black_24dp"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />

</menu>